# TailSTS

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  go.mod  go.sum  renovate.json
.github/: dependabot.yml
.github/workflows/: ci.yml  go.yml  rust.yml  scorecard.yml
cmd/client/: main.go
cmd/jwks/: main.go
cmd/mockjwks/: main.go
cmd/oidc-server/: main.go
cmd/server/: main.go
pkg/jwks/: server.go  token.go
pkg/jwksmock/: server.go
pkg/policy/: policy.go  policy_test.go  read.go  read_test.go  valid.go  valid_test.go
pkg/policy/testdata/invalid_policy/: invalid.toml
pkg/policy/testdata/mixed_valid_invalid/: invalid1.toml  invalid2.toml  invalid3.toml  valid1.toml
pkg/policy/testdata/multiple_policies/: policy2.toml  policy3.toml
pkg/policy/testdata/policies/: policy1.toml  policy2.toml
pkg/server/: handler.go  handler_test.go  jwks.go  oauth.go  oauth_test.go  server.go
pkg/tailscale/: fetcher.go  oauth.go  oauth_test.go  static.go
pkg/testutils/: utils.go
pkg/verifier/: jwks.go  verifier.go
policies/: policy.example.toml  test.toml
src/: app.rs  cli.rs  fetchers.rs  loaders.rs  main.rs  policy.rs  server.rs  tailscale.rs
src/jwks/: mod.rs  reqwestfetcher.rs
src/loader/: fs.rs  mod.rs  validating.rs
src/loaders/: fs.rs  mod.rs
src/policy/: algorithm.rs  fspolicyprovider.rs  local_policy.rs  mod.rs  policy_with_jwks.rs
test/: integration_test.go
