[package]
name = "tail_sts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["http2"] }
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
log = "0.4.21"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.198", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
