[package]
name = "tail_sts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["http2"] }
axum-auth = { version = "0.7.0", default-features = false, features = [
    "auth-bearer",
] }
clap = { version = "4.5.4", features = ["derive", "env"] }
color-eyre = "0.6.3"
dyn-clone = "1.0.17"
env_logger = "0.11.3"
jsonwebtoken = "9.3.0"
log = "0.4.21"
oauth2 = "4.4.2"
redact = "0.1.9"
reqwest = { version = "0.12.4", default-features = false, features = [
    "json",
    "http2",
    "rustls-tls",
] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
